force-app/main/default/objects/Stakeholder_Relation__c/Stakeholder_Relation__c.object-meta.xml
<CustomObject>
    <label>Stakeholder Relation</label>
    <nameField>
        <displayFormat>SMG-{0000}</displayFormat>
        <label>Stakeholder Relation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Relation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>