force-app/main/default/objects/Stakeholder_Relation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stakeholders</relationshipLabel>
    <relationshipName>Stakeholder_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>