force-app/main/default/objects/Stakeholder_Relation__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <inlineHelpText>Add how available this stakeholder is for dialogue or meetings</inlineHelpText>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always available</fullName>
            </value>
            <value>
                <fullName>Sometimes available</fullName>
            </value>
            <value>
                <fullName>Hard to get</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>