force-app/main/default/objects/Stakeholder_Relation__c/fields/Business_Relation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Business_Relation_Formula__c</fullName>
    <formula>TEXT( Contact__r.Business_Relation_to_Sopra_Steria__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Relation</label>
    <type>Text</type>
</CustomField>