force-app/main/default/objects/Stakeholder_Relation__c/fields/Contact_lkp__c.field-meta.xml
<CustomField>
    <fullName>Contact_lkp__c</fullName>
    <description>Used in related list to provide direct link to edit the Sakeholder record. (not having to add the &quot;Name&quot; field to a crowded listview)</description>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; Contact__r.FirstName &amp; Contact__r.LastName, &quot;&quot;, &apos;_self&apos;) &amp; HYPERLINK( Id , Contact__r.FirstName &amp; &quot; &quot;&amp; Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>