force-app/main/default/objects/Stakeholder_Relation__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Count Stakeholder relations for this contact</description>
    <inlineHelpText>Number of Stakeholder relations for this contact</inlineHelpText>
    <label># Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>