force-app/main/default/objects/Stakeholder_Relation__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <formula>Relation_With__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Email</label>
    <type>Text</type>
</CustomField>