force-app/main/default/objects/Stakeholder_Relation__c/fields/Employee_is_SF_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_is_SF_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Stakeholder owner is a Salesforce user</inlineHelpText>
    <label>Employee is SF User</label>
    <type>Checkbox</type>
</CustomField>