force-app/main/default/objects/Stakeholder_Relation__c/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <formula>Datevalue(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Update</label>
    <type>Date</type>
</CustomField>