force-app/main/default/objects/Stakeholder_Relation__c/fields/Meeting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Frequency__c</fullName>
    <inlineHelpText>Add how often this stakeholder and this employee from Sopra Steria have a meeting</inlineHelpText>
    <label>Meeting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>