force-app/main/default/objects/Stakeholder_Relation__c/fields/My_Relationship__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship__c</fullName>
    <description>Used in formula to show only &quot;my&quot; Stakeholder relationships</description>
    <formula>If( Relation_With__r.Email__c =  $User.Username, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Relationship</label>
    <type>Checkbox</type>
</CustomField>