force-app/main/default/objects/Stakeholder_Relation__c/fields/Personal_Relation__c.field-meta.xml
<CustomField>
    <fullName>Personal_Relation__c</fullName>
    <inlineHelpText>•No Relation: No relationship — 
•Been introduced: Have met but are not in dialogue or meeting regularly — 
•Occasional mail / Phone dialogue: Contact with stakeholder is limited to mail or phone — 
•Business meeting relation: Friendly / good dialogue, only case oriented relationship — 
•Close and trusted relation: Provides support or information that is hard to get from others</inlineHelpText>
    <label>Personal Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close and trusted relation</fullName>
            </value>
            <value>
                <fullName>Business meeting relation</fullName>
            </value>
            <value>
                <fullName>Occasional mail / phone dialogue</fullName>
            </value>
            <value>
                <fullName>Been introduced to</fullName>
            </value>
            <value>
                <fullName>No relation</fullName>
            </value>
            <value>
                <fullName>Business meeting relationship</fullName>
                <isActive>false</isActive>
                <label>Business meeting relationship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>