force-app/main/default/objects/Stakeholder_Relation__c/fields/Relation_With__c.field-meta.xml
<CustomField>
    <fullName>Relation_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Add which employee have or should have a relationship with this stakeholder</inlineHelpText>
    <label>Relation With</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Stakeholder Relation</relationshipLabel>
    <relationshipName>Stakeholder_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>