force-app/main/default/objects/Stakeholder_Relation__c/fields/Sopra_Steria__c.field-meta.xml
<CustomField>
    <fullName>Sopra_Steria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sopra Steria employee</inlineHelpText>
    <label>Sopra Steria</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stakeholder_Management</relationshipName>
    <type>Lookup</type>
</CustomField>