force-app/main/default/objects/Stakeholder_Relation__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is found in the Contact page of this stakeholder, and will automatically be placed here when saved. If missing, the field has not been filled out in the Contact page of this stakeholder.</inlineHelpText>
    <label>Title</label>
    <type>Text</type>
</CustomField>